update swagger (create post)
